--- a/charts/rabbitmq-cluster/values.yaml
+++ b/charts/rabbitmq-cluster/values.yaml
@@ -1,55 +1,87 @@
 # Optional Helm name overrides
+# -- Partially override generated resource names.
 nameOverride: ""
+# -- Fully override generated resource names.
 fullnameOverride: ""
 
+# -- Container image configuration.
 image:
+  # -- Container image repository.
   repository: rabbitmq
+  # -- Container image tag.
   tag: 4.2-management-alpine
 
+# -- Set pdb.
 pdb:
+  # -- Enable this feature.
   enabled: false
   # Can be an integer (e.g., 1) or a percentage string (e.g., "25%")
+  # -- Set pdb.maxUnavailable.
   maxUnavailable: 1
 
+# -- Ingress configuration.
 ingress:
+  # -- Enable this feature.
   enabled: false
+  # -- Set ingress.className.
   className: ""
+  # -- Annotations map.
   annotations: {}
     # cert-manager.io/cluster-issuer: foo
+  # -- Host definitions.
   hosts:
     - host: chart-example.local
+      # -- Ingress path definitions.
       paths:
         - path: /
+          # -- Ingress path type.
           pathType: ImplementationSpecific
+  # -- TLS configuration.
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
 
+# -- Set monitoring.
 monitoring:
+  # -- Enable this feature.
   enabled: false
+  # -- Set monitoring.serviceMonitor.
   serviceMonitor:
+    # -- Enable this feature.
     enabled: false
 
+# -- Termination grace period in seconds.
 terminationGracePeriodSeconds: 600
 
+# -- Set rabbitmq.
 rabbitmq:
+  # -- Set rabbitmq.cluster.
   cluster:
     # If false, this chart will NOT create a RabbitmqCluster; you must point topology at an existing cluster.
+    # -- Enable this feature.
     enabled: true
 
     # RabbitmqCluster metadata.name (K8s object name). If empty, defaults to the Helm release fullname.
+    # -- Set rabbitmq.cluster.name.
     name: ""
 
+    # -- Configure rabbitmq.cluster.replicas.
     replicas: 1
 
+    # -- Configure rabbitmq.cluster.delayStartSeconds.
     delayStartSeconds: 10
 
+    # -- Persistence configuration.
     persistence:
+      # -- Enable this feature.
       enabled: false
+      # -- Set rabbitmq.cluster.persistence.storage.
       storage: 10Gi
+      # -- Set rabbitmq.cluster.persistence.storageClassName.
       storageClassName: ""
 
+    # -- Container resource requests and limits.
     resources: {}
       # limits:
       #   cpu: 250m
@@ -61,22 +93,27 @@ rabbitmq:
     # Configuration profile preset (PROD, STAGING, DEV or custom).
     # If set, it applies predefined RabbitMQ configuration snippets.
     # Supported values: "PROD", "STAGING", "DEV". If empty or null, no preset is applied.
+    # -- Set rabbitmq.cluster.configProfile.
     configProfile: null
 
     # Additional RabbitMQ configuration as a multiline string.
     # This will be appended to the environment-specific configuration.
+    # -- Set rabbitmq.cluster.extraConfig.
     extraConfig: ""
 
     # Default plugins
+    # -- Configure rabbitmq.cluster.additionalPlugins.
     additionalPlugins:
       - rabbitmq_management
       - rabbitmq_prometheus
       - rabbitmq_peer_discovery_k8s
 
     # Additional plugins to enable
+    # -- Configure rabbitmq.cluster.extraPlugins.
     extraPlugins:  []
 
     # Overrides for the RabbitmqCluster spec (e.g., for StatefulSet annotations)
+    # -- Set rabbitmq.cluster.override.
     override: {}
     #  statefulSet:
     #    spec:
@@ -85,6 +122,7 @@ rabbitmq:
     #          annotations:
     #            foo: bar
 
+    # -- Affinity rules for pod scheduling.
     affinity: {}
     #  nodeAffinity:
     #    requiredDuringSchedulingIgnoredDuringExecution:
@@ -107,10 +145,13 @@ rabbitmq:
     #          topologyKey: kubernetes.io/hostname
 
 
+  # -- Set rabbitmq.topology.
   topology:
+    # -- Enable this feature.
     enabled: false
 
     # List of queue definitions. Empty by default (generic chart).
+    # -- Configure rabbitmq.topology.queues.
     queues: {}
     # queues item schema:
     #   my_queue:                     # required (RabbitMQ entity name; underscores allowed)
@@ -129,6 +170,7 @@ rabbitmq:
     #       destination: ""             # optional (an existing queue or exchange)
     #       type: queue                 # optional (default queue) [queue, exchange]
 
+    # -- Configure rabbitmq.topology.policies.
     policies: {}
     # policies item schema:
     #   ha-all:                       # required (Policy name)
@@ -140,6 +182,7 @@ rabbitmq:
     #       ha-mode: all
     #       ha-sync-mode: automatic
 
+    # -- Configure rabbitmq.topology.users.
     users: {}
     #   alice:                  # required
     #     enabled: true         # optional (default true)
@@ -154,6 +197,7 @@ rabbitmq:
     #       write: ".*"       # optional, default: ".*"
     #       read: ".*"        # optional, default: ".*"
 
+  # -- Configure rabbitmq.vhosts.
   vhosts: {}
     # example:
     #   my-vhost:
